--- a/figuras.html
+++ b/figuras.html
@@ -8,9 +8,51 @@
     <style src="./figuras.css"></style>
 </head>
 <body>
-    <h1>
-        Figuras geometricas
-    </h1>
+    <header>
+        <h1>
+            Figuras geometricas
+        </h1>
+        <p>
+            Este es el primer taller de JS
+        </p>
+    </header>
+    <section>
+        <h2>
+            calcula el area y el perimetro de un cuadrado
+        </h2>
+        <form action="">
+            <label for="InputCuadrado">Escribe cuanto mide un lado:</label>
+            <input id="InputCuadrado" type="number">
+            <button type="button" onclick="calcularPerimetroCuadrado()">Calcular Perimetro</button>
+            <button type="button" onclick="calcularAreaCuadrado()">Calcular Area</button>
+        </form>
+    </section>
+    <section>
+        <h2>
+            calcula el area y el perimetro de un triangulo
+        </h2>
+        <form action="">
+            <label for="InputTriangulo">Escribe cuanto mide la base:</label>
+            <input id="InputTriangulo" type="number">
+            <label for="InputTriangulo1">Escribe cuanto mide un lado 1:</label>
+            <input id="InputTriangulo1" type="number">
+            <label for="InputTriangulo2">Escribe cuanto mide un lado 2:</label>
+            <input id="InputTriangulo2" type="number">
+            <button type="button" onclick="calcularPerimetroTriangulo()">Calcular Perimetro</button>
+            <button type="button" onclick="calcularAreaTriangulo()">Calcular Area</button>
+        </form>
+    </section>
+    <section>
+        <h2>
+            calcula el area y el perimetro de un circulo
+        </h2>
+        <form action="">
+            <label for="InputCirculo">Escribe cuanto mide su radio:</label>
+            <input id="InputCirculo" type="number">
+            <button type="button" onclick="calcularPerimetroCirculo()">Calcular Perimetro</button>
+            <button type="button" onclick="calcularAreaCirculo()">Calcular Area</button>
+        </form>
+    </section>
     <script src="./figuras.js"></script>
 </body>
 </html>
