--- a/figuras.html
+++ b/figuras.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Esta pagina calula areas y perimetro">
+    <meta name="robots" content="index, follow">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras geometricas</title>
-    <style src="./figuras.css"></style>
+    <link rel="stylesheet" href="./figuras.css">
 </head>
 <body>
     <header>
@@ -22,7 +24,9 @@
         </h2>
         <form action="">
             <label for="InputCuadrado">Escribe cuanto mide un lado:</label>
+            <br>
             <input id="InputCuadrado" type="number">
+            <br>
             <button type="button" onclick="calcularPerimetroCuadrado()">Calcular Perimetro</button>
             <button type="button" onclick="calcularAreaCuadrado()">Calcular Area</button>
         </form>
@@ -31,13 +35,20 @@
         <h2>
             calcula el area y el perimetro de un triangulo
         </h2>
+        <br>
         <form action="">
             <label for="InputTriangulo">Escribe cuanto mide la base:</label>
+            <br>
             <input id="InputTriangulo" type="number">
+            <br>
             <label for="InputTriangulo1">Escribe cuanto mide un lado 1:</label>
+            <br>
             <input id="InputTriangulo1" type="number">
+            <br>
             <label for="InputTriangulo2">Escribe cuanto mide un lado 2:</label>
+            <br>
             <input id="InputTriangulo2" type="number">
+            <br>
             <button type="button" onclick="calcularPerimetroTriangulo()">Calcular Perimetro</button>
             <button type="button" onclick="calcularAreaTriangulo()">Calcular Area</button>
         </form>
@@ -46,9 +57,12 @@
         <h2>
             calcula el area y el perimetro de un circulo
         </h2>
+        <br>
         <form action="">
             <label for="InputCirculo">Escribe cuanto mide su radio:</label>
+            <br>
             <input id="InputCirculo" type="number">
+            <br>
             <button type="button" onclick="calcularPerimetroCirculo()">Calcular Perimetro</button>
             <button type="button" onclick="calcularAreaCirculo()">Calcular Area</button>
         </form>
