--- a/figuras.html
+++ b/figuras.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figuras geometricas</title>
+    <title>Practica JS</title>
     <link rel="stylesheet" href="./figuras.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <h1>
             Figuras geometricas
         </h1>
@@ -67,6 +67,29 @@
             <button type="button" onclick="calcularAreaCirculo()">Calcular Area</button>
         </form>
     </section>
+
+    <h1>
+        DESCUENTOS Y PORCENTAJES
+    </h1>
+    <p>
+        este es el segundo taller del curso practico de JS
+    </p>
+    <form action="">
+        <label for="inputPrice">Escribe el precio de tu producto</label>
+        <input id="inputPrice" type="number" />
+        <br>
+        <label for="inputDiscount">Porcentaje de descuento</label>
+        <input id="inputDiscount" type="number" />
+        <br>
+        <button type="button" onclick="onClickButtonPriceDiscount()">
+            Calcular el precio
+        </button>
+        <br>
+        <p id="ResultP"></p>
+    </form> -->
+    <h1>
+        Mediana
+    </h1>
     <script src="./figuras.js"></script>
 </body>
 </html>
