--- a/APIs/index.html
+++ b/APIs/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, inicial-scale=1.0">
+    <link rel="stylesheet" href="./style.css" type="text">
 </head>
 <body>
-    
+    <h1 id="title1">Hola Mundo</h1>
+    <section>
+        <h2>Photo</h2>
+        <img src="" alt="">
+        <button>Like</button>
+        <button>Dislike</button>
+        <button>Siguiente</button>
+        <button>Anterior</button>
+    </section>
+    <script src="./main.js"></script>
 </body>
 </html>
