--- a/APIs/index.html
+++ b/APIs/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hola</title>
     <meta name="viewport" content="width=device-width, inicial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" type="text">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
-    <h1 id="title1">Hola Mundo</h1>
+    <h1>Hola Mundo</h1>
     <section>
         <h2>Photo</h2>
         <img src="" alt="">
