--- a/APIs/index.html
+++ b/APIs/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola</title>
-    <meta name="viewport" content="width=device-width, inicial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
     <h1>Hola Mundo</h1>
     <section>
         <h2>Photo</h2>
-        <img src="" alt="">
+        <img src="" alt="" id="box">
         <button>Like</button>
         <button>Dislike</button>
         <button>Siguiente</button>
         <button>Anterior</button>
     </section>
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
+    <script src="./src/secrets.js"></script>
 </body>
 </html>
